Cal.com links fixed, lotties sizes aligned

--- a/style.css
+++ b/style.css
@@ -1129,12 +1129,19 @@ p {
 .time-comp .sec{
   font-size:12px; line-height:1.26; color:#7C7C7C; font-weight:500; /* Medium */
 }
+.sec {
+    width: var(--spacing-10);
+}
 .time-comp .ampm{
   margin-left:4px;
   font-size:16px; line-height:1.2; color:#000; font-weight:300; /* Light */
 }
 /* ===== Time Component ===== */
 
+.animated-action {
+    width: 100%;
+    height: 22rem;
+}
 
 
 /* h1 responsive manipualtion */
@@ -1229,6 +1236,7 @@ p {
         max-width: 100vw;
         border-radius:var(--spacing-12) var(--spacing-12) 0 0;
         box-shadow: 0px -71px 42px 0px rgba(0, 0, 0, 0.01),0px -125px 50px 0px rgba(0, 0, 0, 0),0px -31px 31px 0px rgba(0, 0, 0, 0.02),0px -196px 55px 0px rgba(0, 0, 0, 0),0px -8px 17px 0px rgba(0, 0, 0, 0.02);
+        padding:var(--spacing-08) var(--spacing-16) var(--spacing-18) var(--spacing-16) ;
     }
 
     body {
@@ -1389,7 +1397,7 @@ p {
         font-size: var(--spacing-12)
     }
     .design-adv-title {
-        font-size: var(--spacing-42) !important;
+        font-size: var(--spacing-32) !important;
         text-align: start !important;
     }
     .adv-title-img {
@@ -1584,7 +1592,7 @@ p {
         font-size: var(--spacing-12);
     }
     .design-adv-title {
-        font-size: var(--spacing-40) !important;
+        font-size: var(--spacing-32) !important;
         text-align: start !important;
     }
     .fill-width .section-description {
@@ -1655,6 +1663,7 @@ p {
     }
     .sec {
         font-size: var(--spacing-10) !important;
+        line-height: 1.2;
     }
     .time-comp{
     display:inline-flex;
